--- a/Windows-10-сборки.css
+++ b/Windows-10-сборки.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 7832px;
+  min-height: 7829px;
 }
 
 .u-section-1 .u-text-1 {
@@ -154,37 +154,45 @@
   align-self: center;
   background-image: none;
   margin: 9px auto 0;
+  padding: 10px 41px;
+}
+
+.u-section-1 .u-btn-9 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  align-self: center;
+  background-image: none;
+  margin: 9px auto 0;
   padding: 10px 43px 10px 42px;
 }
 
 .u-section-1 .u-text-8 {
-  margin: 110px auto 0;
+  margin: 56px auto 0;
 }
 
-.u-section-1 .u-btn-9 {
+.u-section-1 .u-btn-10 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   align-self: center;
   margin: 3px auto 0;
   padding: 10px 32px;
 }
 
-.u-section-1 .u-btn-10 {
+.u-section-1 .u-btn-11 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   align-self: center;
   margin: 6px auto 0;
 }
 
-.u-section-1 .u-btn-11 {
+.u-section-1 .u-btn-12 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 6px auto 31px;
+  margin: 6px auto 29px;
   padding: 10px 37px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 7951px;
+    min-height: 6455px;
   }
 
   .u-section-1 .u-text-1 {
@@ -197,14 +205,6 @@
 
   .u-section-1 .u-text-3 {
     width: auto;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-top: 6px;
-  }
-
-  .u-section-1 .u-btn-3 {
-    margin-top: 6px;
   }
 
   .u-section-1 .u-text-4 {
@@ -228,19 +228,11 @@
   .u-section-1 .u-text-8 {
     width: auto;
   }
-
-  .u-section-1 .u-btn-11 {
-    margin-bottom: 56px;
-  }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 7028px;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-top: 24px;
+    min-height: 3934px;
   }
 
   .u-section-1 .u-image-1 {
@@ -266,7 +258,6 @@
 
   .u-section-1 .u-image-4 {
     height: 406px;
-    margin-top: 37px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -275,10 +266,6 @@
   .u-section-1 .u-text-3 {
     margin-left: 0;
     margin-right: 0;
-  }
-
-  .u-section-1 .u-text-4 {
-    margin-top: 122px;
   }
 
   .u-section-1 .u-image-5 {
@@ -327,15 +314,11 @@
     margin-left: 0;
     margin-right: 0;
   }
-
-  .u-section-1 .u-btn-11 {
-    margin-bottom: 46px;
-  }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 6282px;
+    min-height: 2924px;
   }
 
   .u-section-1 .u-text-1 {
@@ -397,10 +380,6 @@
     margin-left: initial;
   }
 
-  .u-section-1 .u-text-6 {
-    margin-top: 122px;
-  }
-
   .u-section-1 .u-image-8 {
     height: 304px;
     width: auto;
@@ -421,15 +400,11 @@
     margin-right: initial;
     margin-left: initial;
   }
-
-  .u-section-1 .u-btn-11 {
-    margin-bottom: 56px;
-  }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 5744px;
+    min-height: 1795px;
   }
 
   .u-section-1 .u-text-1 {
@@ -528,7 +503,6 @@
   }
 
   .u-section-1 .u-text-6 {
-    margin-top: 116px;
     margin-left: 0;
     margin-right: 0;
   }
@@ -564,7 +538,8 @@
     margin-right: -82px;
   }
 
-  .u-section-1 .u-btn-11 {
-    margin-bottom: 60px;
+  .u-section-1 .u-btn-9 {
+    margin-left: -82px;
+    margin-right: -82px;
   }
 }
