--- a/Проверка-на-целостность.css
+++ b/Проверка-на-целостность.css
@@ -378,10 +378,11 @@
   }
 
   .u-section-1 .u-image-5 {
+    height: 405px;
     object-position: 0% 50%;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-text-11 {
@@ -395,10 +396,11 @@
   }
 
   .u-section-1 .u-image-6 {
+    height: 405px;
     object-position: 0% 50%;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-text-13 {
@@ -412,10 +414,11 @@
   }
 
   .u-section-1 .u-image-7 {
+    height: 405px;
     object-position: 0% 50%;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-text-15 {
@@ -424,10 +427,11 @@
   }
 
   .u-section-1 .u-image-8 {
+    height: 405px;
     object-position: 0% 50%;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -461,6 +465,10 @@
     margin-right: 0;
   }
 
+  .u-section-1 .u-image-5 {
+    height: 255px;
+  }
+
   .u-section-1 .u-text-11 {
     margin-left: 0;
     margin-right: 0;
@@ -469,6 +477,10 @@
   .u-section-1 .u-text-12 {
     margin-left: 25px;
     margin-right: 25px;
+  }
+
+  .u-section-1 .u-image-6 {
+    height: 255px;
   }
 
   .u-section-1 .u-text-13 {
@@ -481,6 +493,10 @@
     margin-right: 25px;
   }
 
+  .u-section-1 .u-image-7 {
+    height: 255px;
+  }
+
   .u-section-1 .u-text-15 {
     margin-left: 0;
     margin-right: 0;
@@ -489,5 +505,9 @@
   .u-section-1 .u-text-16 {
     margin-left: 25px;
     margin-right: 25px;
+  }
+
+  .u-section-1 .u-image-8 {
+    height: 255px;
   }
 }
